<resources>
  <string name="app_name">CryptoFolder</string>
  <string name="action_purchase_edit">Edit</string>
  <string name="action_purchase_delete">Delete</string>
  <string name="action_details_alert">Alert</string>
  <string name="activity_details_actual_price">Actual price</string>
  <string name="currency_usd">USD</string>
  <string name="currency_dollar">$</string>
  <string name="currency_euro_small">€</string>
  <string name="currency_euro">EUR</string>
  <string name="duration_24h">24H</string>
  <string name="today_max">Max :</string>
  <string name="today_min">Min :</string>
  <string name="amount">Amount</string>
  <string name="coin_currency">BTC</string>
  <string name="actual_total">Actual total</string>
  <string name="total_purchase">Total purchase</string>
  <string name="gain_loss">G/L(%)</string>
  <string name="increasing">↑</string>
  <string name="decreasing">↓</string>
  <string name="percentage">%</string>
  <string name="cryptocoin_name">Bitcoin</string>
  <string name="actual_price_value">11,502.03</string>
  <string name="min_value">0.2531</string>
  <string name="amount_value">63</string>
  <string name="total_value">724,627.89</string>
  <string name="percentage_value">42</string>
  <string name="app_title">CryptoFolder</string>
  <string name="actual_balance">Actual Balance</string>
  <string name="balance_purchase">Total Cost</string>
  <string name="add_new_purchase">Add new purchase</string>
  <string name="select_a_coin">Select a coin</string>
  <string name="unit_price">Unit\nprice</string>
  <string name="unit_price_big">Unit price</string>
  <string name="platform">Platform</string>
  <string name="purchase_date">Purchase date</string>
  <string name="close_purchase_description">Go back to the previous activity</string>
  <string name="complete_purchase_description">Complete adding the new purchase</string>
  <string name="add_purchase_coin">click to select the coin from the list</string>
  <string name="search_a_coin">Search a coin</string>
  <string name="cryptocoin_abbr">BTC</string>
  <string name="purchase">Purchase</string>
  <string name="actual">Actual</string>
  <string name="_20">20%</string>
  <string name="total_price">Total\nprice</string>
  <string name="x">x</string>
  <string name="_eq">=</string>
  <string name="total">Total</string>
  <string name="_2_days_ago">2 days ago</string>
  <string name="purchase_options">click to see purchase options</string>
  <string name="edit">Edit</string>
  <string name="delete">Delete</string>
  <string name="edit_a_purchase">Edit a purchase</string>
  <string name="first_select_a_coin">First \n select a coin</string>
  <string name="title_activity_settings">Settings</string>

  <!-- Strings related to Settings -->

  <!-- Example General settings -->
  <string name="pref_header_general">General</string>

  <string name="pref_title_social_recommendations">Enable social recommendations</string>
  <string name="pref_description_social_recommendations">Recommendations for people to contact based
    on your message history
  </string>

  <string name="pref_title_display_name">Display name</string>
  <string name="pref_general_currency">Currency</string>

  <string-array name="pref_currency_titles">
    <item>USD</item>
    <item>EUR</item>
  </string-array>
  <string-array name="pref_currency_values">
    <item>USD</item>
    <item>EUR</item>
  </string-array>
  <string name="pref_general_language">Language</string>
  <string-array name="pref_language_titles">
    <item>English</item>
    <item>Français</item>
  </string-array>
  <string-array name="pref_language_values">
    <item>en</item>
    <item>fr</item>
  </string-array>

  <!-- Example settings for Data & Sync -->
  <string name="pref_header_data_sync">Data &amp; Sync</string>

  <string name="pref_title_sync_frequency">Sync frequency</string>
  <string-array name="pref_sync_frequency_titles">
    <item>15 seconds</item>
    <item>30 seconds</item>
    <item>1 minutes</item>
    <item>5 minutes</item>
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_sync_frequency_values">
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>300</item>
    <item>900</item>
    <item>1800</item>
    <item>3600</item>
    <item>10800</item>
    <item>12960</item>
    <item>-1</item>
  </string-array>


  <string-array name="multi_select_list_preference_default_value"/>

  <string name="pref_title_system_sync_settings">System sync settings</string>

  <!-- Example settings for Notifications -->
  <string name="pref_header_notifications">Notifications</string>

  <string name="pref_alert_notifications">Alert notifications</string>

  <string name="pref_title_ringtone">Ringtone</string>
  <string name="pref_ringtone_silent">Silent</string>

  <string name="pref_title_vibrate">Vibrate</string>
  <string name="action_home_settings">Settings</string>
  <string name="add_new_alert">Create new alert</string>
  <string name="above">Above</string>
  <string name="below">Below</string>
  <string name="current_value">Current</string>
  <string name="set_threshold">Set Threshold</string>
  <string name="set_frequency">Alert Frequency</string>
  <string name="edit_an_alert">Edit an alert</string>
  <string name="default_gallery_storage">My Videos</string>
  <string name="title_auto_upload">Auto upload</string>
  <string name="pref_title_notifications">Notifications</string>
  <string name="summary_choose_ringtone">Choose notification sound</string>
  <string name="pref_header_about">About</string>
  <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
  <string name="app_version">1.0</string>
  <string name="summary_support">Got any queries? We are happy to help!</string>
  <string name="title_send_feedback">Send Feedback</string>
  <string name="title_faq">FAQ</string>
  <string name="summary_faq">View frequently asked questions</string>
  <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
  <string name="title_terms">Terms &amp; Conditions</string>
  <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
  <string name="title_version">Version</string>
  <string name="choose_email_client">Choose email client</string>
  <string name="title_gallery_storage">Default Storage</string>
  <string name="title_new_notification_sound">New message notification</string>
  <string name="title_vibrate">Vibrate</string>
  <string name="summary_vibrate">Vibrate on new notification</string>
  <string name="key_upload_over_wifi">key_upload_over_wifi</string>
  <string name="key_gallery_name">key_gallery_name</string>
  <string name="key_upload_quality">key_upload_quality</string>
  <string name="notifications_new_message">notifications_new_message</string>
  <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
  <string name="key_vibrate">key_vibrate</string>
  <string name="key_send_feedback">key_send_feedback</string>
  <string name="first_enable_alert">First enable the alert</string>
  <string name="alert_disabled">Alert Disabled</string>
  <string name="alert_enabled">Alert Enabled</string>
  <string name="updated_alert">Updated alert</string>
  <string name="new_alert_inserted">New alert was inserted</string>
  <string name="empty_field">Empty field</string>
  <string name="above_gt_below"><![CDATA[Above must be > below]]></string>
  <string name="delete_dialog_message">Are you sure to delete this purchase?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="setting_up_first_time">Setting up the application for the first time   please wait...</string>
  <string name="welcome_message">Welcome to   Crypto folder</string>
  <string name="data_received">data:</string>
  <string name="loading">Loading...</string>
  <string name="below_value">below value</string>
  <string name="above_value">above value</string>
  <string name="purchase_inserted">Inserted new purchase</string>
  <string name="purchase_updated">Purchase Updated</string>
</resources>
