<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/pref_header_general">
    <ListPreference
      android:defaultValue="USD"
      android:entries="@array/pref_currency_titles"
      android:entryValues="@array/pref_currency_values"
      android:key="currency_list"
      android:negativeButtonText="@null"
      android:positiveButtonText="@null"
      android:summary="%s"
      android:title="@string/pref_general_currency"/>
    <ListPreference
      android:defaultValue="en"
      android:entries="@array/pref_language_titles"
      android:entryValues="@array/pref_language_values"
      android:key="languages_list"
      android:negativeButtonText="@null"
      android:positiveButtonText="@null"
      android:summary="%s"
      android:title="@string/pref_general_language"/>

  </PreferenceCategory>

  <PreferenceCategory
    android:icon="@drawable/ic_notifications_black_24dp"
    android:title="@string/pref_header_notifications">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
           when checked/unchecked. -->
    <SwitchPreference
      android:defaultValue="true"
      android:key="notifications_alert"
      android:title="@string/pref_alert_notifications"/>


    <RingtonePreference
      android:defaultValue="content://settings/system/notification_sound"
      android:dependency="notifications_alert"
      android:key="notifications_new_message_ringtone"
      android:ringtoneType="notification"
      android:title="@string/pref_title_ringtone"/>


    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
      android:defaultValue="true"
      android:dependency="notifications_alert"
      android:key="notifications_new_message_vibrate"
      android:title="@string/pref_title_vibrate"/>
  </PreferenceCategory>
  <PreferenceCategory
    android:icon="@drawable/ic_notifications_black_24dp"
    android:title="@string/pref_header_data_sync">
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
    dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
      android:layout_height="match_parent"
      android:defaultValue="3600"
      android:entries="@array/pref_sync_frequency_titles"
      android:entryValues="@array/pref_sync_frequency_values"
      android:key="sync_frequency"
      android:negativeButtonText="@null"

      android:positiveButtonText="@null"
      android:summary="%s"
      android:title="@string/pref_title_sync_frequency"/>

  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_header_about">

    <Preference
      android:selectable="false"
      android:summary="@string/summary_about"/>

    <Preference
      android:summary="@string/app_version"
      android:title="@string/title_version"/>

    <Preference
      android:key="@string/key_send_feedback"
      android:summary="@string/summary_support"
      android:title="@string/title_send_feedback"/>

    <!-- preference opens url in browser -->
    <Preference
      android:summary="@string/summary_faq"
      android:title="@string/title_faq">
      <intent
        android:action="android.intent.action.VIEW"
        android:data="@string/url_faq"/>
    </Preference>

    <Preference android:title="@string/privacy_policy">
      <intent
        android:action="android.intent.action.VIEW"
        android:data="@string/url_privacy"/>
    </Preference>

    <Preference android:title="@string/title_terms">
      <intent
        android:action="android.intent.action.VIEW"
        android:data="@string/url_terms"/>
    </Preference>
  </PreferenceCategory>
</PreferenceScreen>