<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="@dimen/dimen_16dp"
  android:background="@android:color/transparent"
  android:orientation="vertical">

  <TextView
    android:id="@+id/activity_home_actual_balance"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="@string/actual_balance"
    android:textColor="@color/colorPrimaryLight"
    android:textSize="@dimen/dimen_18sp"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_16dp"
    android:gravity="center_vertical|center_horizontal">
    <TextView
      android:id="@+id/activity_home_actual_balance_value"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/colorAccent"
      android:textSize="@dimen/dimen_42sp"
      tools:text="@string/total_value"/>
    <TextView
      android:id="@+id/activity_home_actual_balance_currency"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/dimen_4dp"
      android:textColor="@color/colorPrimaryLight"
      android:textSize="@dimen/dimen_20sp"
      tools:text="@string/currency_usd"/>
  </LinearLayout>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dimen_16dp"
    android:orientation="vertical">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <TextView
        android:id="@+id/activity_home_balance_purchase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/balance_purchase"
        android:textColor="@color/colorPrimaryLight"/>
      <TextView
        android:id="@+id/activity_home_gain_loss"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/gain_loss"
        android:textColor="@color/colorPrimaryLight"/>

    </LinearLayout>
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:baselineAligned="false"
      android:orientation="horizontal">
      <LinearLayout
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:gravity="top">
        <TextView
          android:id="@+id/activity_home_balance_purchase_value"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/cardview_light_background"
          tools:text="@string/actual_price_value"/>
        <TextView
          android:id="@+id/activity_home_balance_purchase_currency"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="@dimen/dimen_2dp"
          android:textColor="@color/colorPrimaryLight"
          android:textSize="@dimen/dimen_12sp"
          tools:text="@string/currency_dollar"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right|top"
        android:orientation="vertical">
        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">


          <TextView
            android:id="@+id/activity_home_gain_loss_variation"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/cardview_light_background"
            android:textSize="@dimen/dimen_24sp"
            tools:text="@string/increasing"
            />
          <TextView
            android:id="@+id/activity_home_gain_loss_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_light_background"
            tools:text="@string/actual_price_value"/>

          <TextView
            android:id="@+id/activity_home_gain_loss_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_2dp"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/dimen_12sp"
            tools:text="@string/currency_dollar"/>
        </LinearLayout>
        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          <TextView
            android:id="@+id/activity_home_gain_loss_percentage_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/cardview_light_background"
            tools:text="@string/percentage_value"
            />
          <TextView
            android:id="@+id/activity_home_gain_loss_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/dimen_12sp"/>
        </LinearLayout>
      </LinearLayout>

    </LinearLayout>
  </LinearLayout>
</LinearLayout>