<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_alert_root"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context="com.nafaaazaiez.cryptofolder.view.activity.AlertActivity">

  <LinearLayout
    android:id="@+id/activity_alert_toolbar"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:paddingLeft="@dimen/dimen_4dp"
    android:paddingRight="@dimen/dimen_4dp"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">
    <ImageView
      android:layout_width="@dimen/dimen_0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_gravity="start"
      android:paddingTop="@dimen/dimen_16dp"
      android:paddingBottom="@dimen/dimen_16dp"
      android:contentDescription="@string/close_purchase_description"
      android:focusable="true"
      android:foreground="?android:attr/selectableItemBackground"
      android:onClick="close"
      app:srcCompat="@drawable/ic_close"/>
    <TextView
      android:id="@+id/activity_alert_tv_title"
      android:layout_width="@dimen/dimen_0dp"
      android:layout_height="wrap_content"
      android:layout_weight="5"
      android:paddingTop="@dimen/dimen_16dp"
      android:paddingBottom="@dimen/dimen_16dp"
      android:text="@string/add_new_alert"
      android:textAlignment="center"
      android:textColor="@android:color/white"
      android:textSize="18sp"/>
    <ImageView
      android:layout_width="@dimen/dimen_0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:layout_gravity="end"
      android:paddingTop="@dimen/dimen_16dp"
      android:paddingBottom="@dimen/dimen_16dp"
      android:contentDescription="@string/complete_purchase_description"
      android:focusable="true"
      android:foreground="?android:attr/selectableItemBackground"
      android:onClick="complete"
      app:srcCompat="@drawable/ic_confirm"/>
  </LinearLayout>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/dimen_16dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
          android:id="@+id/activity_alert_image_circle_background"
          android:layout_width="@dimen/dimen_72dp"
          android:layout_height="@dimen/dimen_72dp"
          android:layout_margin="@dimen/dimen_16dp"
          android:background="@drawable/ic_circle_white"
          android:gravity="center">

          <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activity_alert_image_select"
            android:layout_width="40dp"
            android:layout_height="34dp"
            android:contentDescription="@string/add_purchase_coin"
            app:srcCompat="@drawable/ic_add_primary"/>

        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical">

          <TextView
            android:id="@+id/activity_alert_switch_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alert_disabled"
            android:textColor="@android:color/white"/>

          <android.support.v7.widget.SwitchCompat
            android:id="@+id/activity_alert_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:gravity="end"
            android:textOff="@string/alert_disabled"
            android:textOn="@string/alert_enabled"/>

        </LinearLayout>

      </LinearLayout>
      <ProgressBar
        android:id="@+id/activity_alert_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_16dp"
        android:indeterminate="true"
        android:visibility="gone"/>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
          android:id="@+id/activity_alert_input_form"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/dimen_16dp"
          android:paddingBottom="@dimen/dimen_24dp"
          android:orientation="vertical"
          android:soundEffectsEnabled="true"
          android:visibility="gone">

          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_threshold"
            android:textColor="@color/black"/>
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:layout_gravity="center_vertical"
              android:text="@string/above"
              android:textSize="@dimen/dimen_12sp"
              />
            <EditText
              android:id="@+id/activity_alert_input_above"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:layout_marginTop="@dimen/dimen_8dp"
              android:layout_marginBottom="@dimen/dimen_8dp"
              android:layout_gravity="end"
              android:hint="@string/above_value"
              android:inputType="numberDecimal|number"
              android:textAlignment="viewEnd"/>

          </LinearLayout>
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/current_value"
              android:textSize="@dimen/dimen_12sp"
              />
            <TextView
              android:id="@+id/activity_alert_input_current"
              android:textStyle="bold"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:layout_gravity="end"
              android:hint="@string/current_value"
              android:text="0"
              android:textAlignment="viewEnd"
              android:textColor="@color/colorPrimary"
              android:textSize="@dimen/dimen_18sp"
              />

          </LinearLayout>
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:layout_gravity="center_vertical"
              android:text="@string/below"
              android:textSize="@dimen/dimen_12sp"
              />
            <EditText
              android:id="@+id/activity_alert_input_below"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:layout_marginTop="@dimen/dimen_8dp"
              android:layout_marginBottom="@dimen/dimen_8dp"
              android:layout_gravity="end"
              android:hint="@string/below_value"
              android:inputType="numberDecimal|number"
              android:textAlignment="viewEnd"/>

          </LinearLayout>


        </LinearLayout>
        <LinearLayout
          android:id="@+id/activity_alert_disable_form"
          android:layout_width="match_parent"
          android:layout_height="400dp"
          android:paddingTop="@dimen/dimen_12dp"
          android:background="@color/dark_grey"
          android:orientation="vertical"
          android:soundEffectsEnabled="true"
          android:visibility="gone">
          <ImageView
            android:layout_width="@dimen/dimen_64dp"
            android:layout_height="@dimen/dimen_64dp"
            android:layout_gravity="center"
            android:contentDescription="@string/first_enable_alert"
            app:srcCompat="@drawable/ic_arrow_upward_white_24dp"/>
          <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/first_enable_alert"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_24sp"/>
        </LinearLayout>

      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</LinearLayout>